--- a/lib/chapter5-FCC.tex
+++ b/lib/chapter5-FCC.tex
@@ -97,15 +97,15 @@ Confusion matrix:
 \begin{figure}[H]
     \centering
     \includegraphics[scale = 0.8]{img/06-5-ccf.png}
-    \caption{Dendograma Plot k = 2}
+    \caption{Dendograma Plot k = 2 utilizando FACC}
     \label{fig:ccf_imp}
 \end{figure}
 
-\paragraph{Media de los valores de Peridiograma en función de los clusters generados $k = 2$}
+\paragraph{Media de los valores de FCC en función de los clusters generados $k = 2$}
 
 \begin{figure}[H]
     \centering
     \includegraphics[scale = 0.8]{img/06-6-ccf.png}
-    \caption{Dendograma Plot k = 2}
+    \caption{Dendograma Plot k = 2 utilizando FACC}
     \label{fig:ccf_cls}
 \end{figure}
