--- a/lib/chapter5.tex
+++ b/lib/chapter5.tex
@@ -1,4 +1,4 @@
-\section{RESULTADOS}\label{cap:results}
+\section{CAPÍTULO V: RESULTADOS}\label{cap:results}
 
 \subsection{Estructura de los Resultados}\label{sec:results}
 
@@ -119,8 +119,6 @@ Al igual que en el apartado anterior el resultado es el siguiente mostrado en la
 Se puede observar como de manera general que a los pacientes que se les suministra OAF tienen una mayor \textit{Saturación de O$_2$} que los que no. Esto se puede observar en la Figura~\ref{fig:satO2-boxplot-mean}, aun así no se puede afirmar que esto tenga un efecto significativo de manera general en toda la monitorización del paciente.
 
 La única media significativa menor que $\alpha = 0.05$ es la monitorizada en la hora $2$. Al igual que en el apartado anterior, esta situación va a causar a la hora de realizar el \textit{Estudio 2} se tendrán problemas a la hora de realizar un modelo de clasificación dónde los valores de monitorización de la \textit{Saturación de O$_2$} sean significativos a la hora de clasificar pacientes como DETERIORO o no.
-
-{\color{blue} Hay algunas cosas que pueden estar influyendo en estos resultados "negativos": (1) El supuesto de varianzas iguales; (2) El supuesto de distribuciones normales. Ambos supuestos son los que conducen a la distribución t con n+m-2 grados de libertad. Por último, (3) la presencia de atípicos.}
 
 \begin{figure}[H]
     \centering
