--- a/lib/chapter7.tex
+++ b/lib/chapter7.tex
@@ -1,4 +1,4 @@
-\section{PLANIFICACIÓN Y PRESUPUESTO}\label{cap:results}
+\section{CAPÍTULO VII: PLANIFICACIÓN Y PRESUPUESTO}\label{cap:results}
 
 \subsection{Planificación}\label{sec:planificacion}
 
