--- a/main.tex
+++ b/main.tex
@@ -388,10 +388,10 @@ every picture/.append style={
 \begin{flushright} % Se alinea el texto en el lado derecho de la página.
 \vspace*{5cm} % Se añade un espacio vertical de 5cm para situar la cita en ~1/3 de la página.
 
-\textit{“ En realidad, el único momento de la vida en que siento ser yo mismo es cuando estoy con mis amigos”} 
+\textit{“  Qué ilusión extraña es suponer que la belleza es la bondad”} 
 
 \medskip % Salto a la línea de tamaño medio (existen \smallskip, \medskip y \bigskip)
-- Gabriel García Márquez 
+- Lev Nikoláyevich Tolstói 
 
 \end{flushright}
 
@@ -434,7 +434,7 @@ Gracias en último lugar a mi familia por ser familia y estar ahí siempre.
 \section*{RESUMEN EJECUTIVO} % Se añade un asterisco a \section para que el título no esté numerado.
 \markright{RESUMEN EJECUTIVO} % Al utilizar \section* se ha de añadir manualmente el título del apartado al encabezado.
 \addcontentsline{toc}{section}{RESUMEN EJECUTIVO} % Al utilizar \section* se ha de añadir manualmente el apartado al índice (Table Of Contents, TOC).
-
+\include{lib\resumen.tex}
 \afterpage{\blankpage} % Se añade una página en blanco después del resumen.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
