--- a/lib/chapter6.tex
+++ b/lib/chapter6.tex
@@ -1,4 +1,4 @@
-\section{CONCLUSIONES Y LÍNEAS FUTURAS}\label{cap:conclusionesANDlineasfuturas}
+\section{CAPÍTULO VI: CONCLUSIONES Y LÍNEAS FUTURAS}\label{cap:conclusionesANDlineasfuturas}
 
 \subsection{Conclusiones}\label{sec:conclusiones}
 
@@ -6,8 +6,32 @@ Una vez finalizado el trabajo de investigación realizado se van a abordar las c
 
 En primer lugar se ha realizado un estudio de los sistemas de monitorización de planta pediátrica de pacientes con cuadro bronquiolitis, se ha concluido que dicha monitorización es una herramienta eficaz para la detección de pacientes de riesgo y que permite la toma de decisiones clínicas de forma temprana a la hora de suministrar OAF.
 
-Se ha evaluado y contrastado si se puede afirmar que los pacientes a los que se les ha aplicado OAF presentan una saturación de oxígeno mayor que los pacientes sin OAF, y si presentan una frecuencia cardíaca mayor. Se ha concluido que de manera general en el espectro de valores de monitorización horarios esto no se puede afirmar de manera significativa, solamente en algunos momentos puntuales se ha observado que los pacientes con OAF presentan una saturación de oxígeno y frecuencia cardíaca mayor que los pacientes sin OAF, y que presentan una frecuencia cardíaca mayor pero no se debería extrapolar a todo el rango horario. 
+Se ha evaluado y contrastado si se puede afirmar si a los pacientes a los que se les ha aplicado OAF presentan una saturación de oxígeno mayor que los pacientes sin OAF, y si presentan una frecuencia cardíaca mayor. Se ha concluido que de manera general en el espectro de valores de monitorización horarios esto no se puede afirmar de manera significativa, solamente en algunos momentos puntuales se ha observado que los pacientes con OAF presentan una saturación de oxígeno y frecuencia cardíaca mayor que los pacientes sin OAF, pero no se puede extrapolar de manera general a todo el rango horario. 
 
-Se ha pretendido ver si es posible agrupar a los pacientes obtenidos en el estudio y aislar a aquellos que han sufrido \textit{DETERIORO}. Se ha concluido que con los datos utilizados esto es imposible y que el \textit{DETERIORO} es un evento muy complejo que está influenciado por muchos factores, no solo por los datos de monitorización. A la hora de evaluar los diferentes clusters obtenidos ninguno se ha podido asociar a un grupo de pacientes con \textit{DETERIORO}.
+Se ha pretendido ver si es posible agrupar a los pacientes obtenidos en el estudio y aislar a aquellos que han sufrido \textit{DETERIORO}. Se ha concluido que con los datos utilizados esto no es posible y que el \textit{DETERIORO} es un evento muy complejo que está influenciado por muchos factores, no solo por los datos de monitorización. A la hora de evaluar los diferentes clusters obtenidos ninguno se ha podido asociar a un grupo de pacientes con \textit{DETERIORO}.
 
-Se ha observado como el hecho de transformar la Frecuencia Cardíaca por cuantiles y escalarla ayuda a reducir el hecho de separar los pacientes atendiendo a la \textit{EDAD} 
+Por otro lado, se ha observado como el hecho de transformar la Frecuencia Cardíaca por cuantiles y escalarla ayuda a reducir el hecho de separar los pacientes atendiendo a la \textit{EDAD}. Por otro lado a la hora de agrupar los pacientes en función de las transformaciones hechas de las series temporales (FAC, FCC, Peridiograma) y los valores brutos de monitorización (Raw Data), se ha observado que de manera general las escalas utilizadas a la hora del ingreso del paciente pediátrico (\textit{SCORE\_WOOD\_DOWNES\_INGRESO} y \textit{SCORE\_CRUCES\_INGRESO}) son un buen indicador de la evolución de las Series Temporales de los datos de monitorización, no tanto del estado del paciente. 
+
+Se ha concluido que el uso de la técnica de \textit{SMOTE} es una buena herramienta para el tratamiento de desbalanceo de clases, y que es una herramienta de ayuda a la hora de clasificar los pacientes en tanto en función de los diferentes clusters obtenidos como de la etiqueta \textit{DETERIORO}.
+
+En último lugar se ha concluido que el uso de la técnica de \textit{Random Forest} es una buena herramienta para la clasificación de los pacientes en función de los diferentes clusters obtenidos y de la etiqueta \textit{DETERIORO} a partir de las 8 primeras horas de ingreso. Por la limitación de los datos la etiqueta \textit{UCIP} no ha sido utilizada por su falta de representatividad y simplemente se ha reducido el estudio a una valoración de la necesidad de OAF una vez pasadas las 8 primeras horas, por la misma razón de falta de representatividad de pacientes con suministro de OAF en los diferentes intervalos horarios.
+
+El modelo programado que evalúa al paciente pediátrico pasadas las 8 primeras horas es robusto y es capaz de clasificar si el paciente va a necesitar OAF o no con una precisión validada en un conjunto de datos de testeo del 96\% y con un OOB del 4.35\%. Se justifica el uso de este modelo frente a un modelo de regresión logística dado el mejor resultado obtenido a la hora de la clasificación de los pacientes.
+
+Las escalas de valoración al ingreso así como la decisión de suministrar Suero, hacer una Radiografía y tomar una analítica son las variables más importantes a la hora de clasificar al paciente. Es decir el modelo identifica que los pacientes que más riesgo tienen son aquellos que al ingreso los profesionales de la salud hacen una previa valoración de riesgo y deciden suministrar Suero, hacer una Radiografía y tomar una analítica.
+
+
+
+\subsection{Líneas Futuras}\label{sec:líneas-futuras}
+
+A continuación se van a exponer las líneas futuras que se pueden abordar a partir de este trabajo de investigación.
+
+En primer lugar sería interesante poder ampliar el estudio a un mayor número de pacientes, para poder tener una mayor representatividad de los mismos y poder realizar un estudio más robusto así poder validar si los pacientes generados por SMOTE son representativos de la población y son similares a aquellos pacientes que han sufrido \textit{DETERIORO} en nuevas recopilaciones de datos.
+
+El poder aumentar la muestra de los pacientes se podría marcar la diferencia entre pacientes que acaban en la UCIP y aquellos que necesitan OAF, planteando el estudio de manera independiente y no juntando ambas variables en el concepto de \textit{DETERIORO}. El poder aumentar la muestra permitiría valorar al paciente no solo a las 8 primeras horas después del ingreso, si no en el mismo ingreso, a las 8h, a las 16h y a las 24h y poder ver si el modelo es capaz de predecir si el paciente va a necesitar OAF en los diferentes intervalos horarios.
+
+Sería a su vez interesante poder ampliar el estudio a un mayor número de variables de monitorización, como por ejemplo la presión arterial, la temperatura, la frecuencia respiratoria, etc y poder hacer un estudio entre ellas para ver cual es la que va más de la mano del \textit{DETERIORO}.
+
+En el presente trabajo se han generado muchísimos datos frutos de resultados obtenidos y por ello sería interesante plantear un estudio de todos estos datos generados para poder sacar conclusiones más robustas. 
+
+Como último punto importante de planteamiento, sería a su vez interesante en el estudio valorar la posibilidad de utilizar series temporales en relación con las horas de sueño del paciente, para reducir el ruido que puede generar el hecho de que el paciente este durmiendo, y poder ver si el modelo es capaz de predecir si el paciente va a necesitar OAF en los diferentes intervalos horarios. 
